# cineFilm

./: .gitignore  README.md
backend/: pyproject.toml
backend/accounts/: apps.py  authentication.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/movies/: admin.py  models.py  serializers.py  urls.py  views.py
backend/movies/management/commands/: import_tmdb.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/Router/: AppRouter.tsx
frontend/src/app/providers/: AuthProvider.tsx  Providers.tsx
frontend/src/app/styles/: _fonts.scss  _globals.scss  _normalize.scss  index.scss
frontend/src/context/: AuthContext.tsx
frontend/src/pages/Catalog/: Catalog.module.scss  Catalog.tsx  index.ts
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Login/: Login.module.scss  Login.tsx
frontend/src/pages/Profile/: Profile.module.scss  Profile.tsx
frontend/src/pages/Register/: Register.module.scss  Register.tsx
frontend/src/pages/page0/: index.ts  page0.tsx
frontend/src/pages/page1/: index.ts  page1.tsx
frontend/src/pages/register/: Register.module.scss  Register.tsx
frontend/src/shared/api/: base.ts  http.ts
frontend/src/shared/hooks/: useAuth.ts
frontend/src/shared/styles/: _constans.scss  _functions.scss  _media.scss  _mixins.scss  _utils.scss  _variables.scss
frontend/src/shared/utils/: pagination.ts
frontend/src/widgets/Button/: Button.module.scss  Button.tsx
frontend/src/widgets/Hero/: Hero.tsx  (+1 more)
(+32 files in other folders)
